deployment/kubernetes/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: universal-runtime
spec:
  replicas: 2
  selector: {matchLabels: {app: haproxy}}
  template:
    metadata: {labels: {app: haproxy}}
    spec:
      automountServiceAccountToken: false
      containers:
        - name: haproxy
          image: haproxy:3.0
          ports: [{name: http, containerPort: 8080}]
          volumeMounts: [{name: config, mountPath: /usr/local/etc/haproxy/haproxy.cfg, subPath: haproxy.cfg, readOnly: true}]
      volumes: [{name: config, configMap: {name: haproxy-config}}]
