deployment/kubernetes/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: universal-runtime
spec:
  selector: {app: haproxy}
  ports: [{name: http, port: 8080, targetPort: http}]
